[gd_scene load_steps=27 format=3 uid="uid://iipet6x5y07a"]

[ext_resource type="Script" path="res://world/world.gd" id="1_h1vqe"]
[ext_resource type="PackedScene" uid="uid://cq70shh7c8yl0" path="res://world/camera/CameraBase.tscn" id="2_icfy6"]
[ext_resource type="PackedScene" uid="uid://b6fwt1mqc8rxa" path="res://tiles/base/basicTile.tscn" id="7_ck8hb"]
[ext_resource type="PackedScene" uid="uid://bpgabupewtxl1" path="res://tiles/base/groundTile.tscn" id="8_c82qg"]
[ext_resource type="PackedScene" uid="uid://jnsrjs3gf0l8" path="res://assets/flag.glb" id="8_q6yvh"]
[ext_resource type="Script" path="res://player/Player.gd" id="9_8wgje"]
[ext_resource type="Resource" uid="uid://c21sptw6iqmit" path="res://tiles/tiles_properties/tiles_res/forest_birch_beaver.tres" id="9_lqogg"]
[ext_resource type="Resource" uid="uid://8gnmpkivw170" path="res://tiles/tiles_properties/tiles_res/forest_birch_dig.tres" id="9_rofbj"]
[ext_resource type="Resource" uid="uid://b1spy3qqi0k00" path="res://biomes/biome_properties/forest_birch_0.tres" id="10_aeis7"]
[ext_resource type="PackedScene" uid="uid://bep2ry8kpkusw" path="res://UI/hud.tscn" id="10_i16hi"]
[ext_resource type="PackedScene" uid="uid://ohmip8tgo8sq" path="res://tiles/tiles_properties/tiles_art/tile_full/forest_birch_dig.glb" id="11_2e75p"]
[ext_resource type="PackedScene" uid="uid://cx5h7b504hdwq" path="res://world/2d_tile_map/2d_tilemap_for_world.tscn" id="11_mpyui"]
[ext_resource type="Resource" uid="uid://chsna54yj5f0l" path="res://tiles/tiles_properties/tiles_res/forest_birch_dome.tres" id="12_13ab8"]
[ext_resource type="PackedScene" uid="uid://c376jedbey0pt" path="res://tiles/tiles_properties/tiles_art/tile_full/forest_birch_beaver.glb" id="12_nmwxc"]
[ext_resource type="Resource" uid="uid://bwbae6r61dsd5" path="res://tiles/tiles_properties/tiles_res/forest_birch_forest.tres" id="13_4g7h1"]
[ext_resource type="PackedScene" uid="uid://iw0mlmo54ni3" path="res://tiles/tiles_properties/tiles_art/tile_full/forest_birch_forest.glb" id="14_a0nro"]
[ext_resource type="PackedScene" uid="uid://4tv1wjumuhxp" path="res://tiles/tiles_properties/tiles_art/tile_full/forest_birch_dome.glb" id="14_s6oen"]
[ext_resource type="Resource" uid="uid://c4ewvp7o8dkjl" path="res://tiles/tiles_properties/tiles_res/forest_birch_mountain.tres" id="15_kh2p1"]
[ext_resource type="PackedScene" uid="uid://b4e05dkxc67s1" path="res://tiles/tiles_properties/tiles_art/tile_full/forest_birch_mountain.glb" id="16_ge65f"]
[ext_resource type="Resource" uid="uid://dh3h1udtkiwwe" path="res://tiles/tiles_properties/tiles_res/forest_birch_ritual.tres" id="17_70by2"]
[ext_resource type="PackedScene" uid="uid://b0jyk0oglpaag" path="res://tiles/tiles_properties/tiles_art/tile_full/forest_birch_ritual.glb" id="18_b6y8j"]
[ext_resource type="Resource" uid="uid://dxkp4fynfx3f4" path="res://tiles/tiles_properties/tiles_res/forest_birch_tower.tres" id="19_biugo"]
[ext_resource type="PackedScene" uid="uid://cqeb7pdwsi0vu" path="res://tiles/tiles_properties/tiles_art/tile_full/forest_birch_tower.glb" id="20_a5pda"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_w46fu"]
sky_top_color = Color(0.372549, 0.592157, 0.960784, 1)
sky_horizon_color = Color(0.843137, 0.898039, 0.992157, 1)
ground_bottom_color = Color(0.466667, 0.301961, 0.219608, 1)
ground_horizon_color = Color(0.913725, 0.788235, 0.72549, 1)

[sub_resource type="Sky" id="Sky_wrj4h"]
sky_material = SubResource("ProceduralSkyMaterial_w46fu")

[sub_resource type="Environment" id="Environment_bk136"]
background_mode = 1
background_color = Color(0.341176, 0.686275, 0.780392, 1)
sky = SubResource("Sky_wrj4h")
ambient_light_source = 3
ambient_light_color = Color(0.894118, 0.768627, 0.635294, 1)
ambient_light_sky_contribution = 0.8
ambient_light_energy = 0.0

[node name="World3D" type="Node3D"]
script = ExtResource("1_h1vqe")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bk136")

[node name="CameraBase" parent="." instance=ExtResource("2_icfy6")]

[node name="MainLight" type="DirectionalLight3D" parent="CameraBase"]
transform = Transform3D(0.712895, 0.303117, 0.632377, -0.201499, -0.775193, 0.598728, 0.671699, -0.554253, -0.491553, 30, 30, -30)
light_color = Color(0.945098, 0.929412, 0, 1)
light_energy = 0.4
shadow_enabled = true

[node name="GameMapTest" type="Node3D" parent="."]
visible = false

[node name="basicTile" parent="GameMapTest" instance=ExtResource("7_ck8hb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5944, 0, 2.65965)

[node name="flag" parent="GameMapTest" instance=ExtResource("8_q6yvh")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 3.15589, 1.70051, 2.56069)

[node name="Player" type="Node3D" parent="."]
script = ExtResource("9_8wgje")

[node name="HUD" parent="." instance=ExtResource("10_i16hi")]
scale = Vector2(0.996706, 0.994125)

[node name="TileMap2D" parent="." instance=ExtResource("11_mpyui")]
visible = false

[node name="WorldDynamic" type="Node3D" parent="."]
visible = false

[node name="WorldEditor" type="Node3D" parent="."]

[node name="BasicTile2" parent="WorldEditor" instance=ExtResource("7_ck8hb")]
visible = false
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("9_rofbj")

[node name="BasicTile3" parent="WorldEditor" instance=ExtResource("7_ck8hb")]
visible = false
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("9_rofbj")

[node name="forest_birch_0_beaver" parent="WorldEditor" instance=ExtResource("7_ck8hb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.8726, 0, 0)
visible = false
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("9_lqogg")

[node name="GroundTile" parent="WorldEditor/forest_birch_0_beaver" instance=ExtResource("8_c82qg")]
visible = false
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("9_lqogg")

[node name="forest_birch_beaver" parent="WorldEditor/forest_birch_0_beaver" instance=ExtResource("12_nmwxc")]

[node name="forest_birch_0_dome" parent="WorldEditor" instance=ExtResource("7_ck8hb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 5)
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("12_13ab8")

[node name="GroundTile" parent="WorldEditor/forest_birch_0_dome" instance=ExtResource("8_c82qg")]
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("12_13ab8")

[node name="Socketfull" parent="WorldEditor/forest_birch_0_dome" instance=ExtResource("14_s6oen")]

[node name="forest_birch_0_forest" parent="WorldEditor" instance=ExtResource("7_ck8hb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -5)
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("13_4g7h1")

[node name="GroundTile" parent="WorldEditor/forest_birch_0_forest" instance=ExtResource("8_c82qg")]
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("13_4g7h1")

[node name="Socketfull" parent="WorldEditor/forest_birch_0_forest" instance=ExtResource("14_a0nro")]

[node name="forest_birch_0_mountain" parent="WorldEditor" instance=ExtResource("7_ck8hb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 5)
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("15_kh2p1")

[node name="GroundTile" parent="WorldEditor/forest_birch_0_mountain" instance=ExtResource("8_c82qg")]
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("15_kh2p1")

[node name="Socketfull" parent="WorldEditor/forest_birch_0_mountain" instance=ExtResource("16_ge65f")]

[node name="forest_birch_0_ritual" parent="WorldEditor" instance=ExtResource("7_ck8hb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -5)
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("17_70by2")

[node name="GroundTile" parent="WorldEditor/forest_birch_0_ritual" instance=ExtResource("8_c82qg")]
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("17_70by2")

[node name="Socketfull" parent="WorldEditor/forest_birch_0_ritual" instance=ExtResource("18_b6y8j")]

[node name="forest_birch_0_tower" parent="WorldEditor" instance=ExtResource("7_ck8hb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -5)
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("19_biugo")

[node name="GroundTile" parent="WorldEditor/forest_birch_0_tower" instance=ExtResource("8_c82qg")]
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("19_biugo")

[node name="Socketfull" parent="WorldEditor/forest_birch_0_tower" instance=ExtResource("20_a5pda")]

[node name="forest_birch_0_dig" parent="WorldEditor" instance=ExtResource("7_ck8hb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 5)
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("9_rofbj")

[node name="GroundTile" parent="WorldEditor/forest_birch_0_dig" instance=ExtResource("8_c82qg")]
biome_properties = ExtResource("10_aeis7")
tile_properties = ExtResource("9_rofbj")

[node name="Socketfull" parent="WorldEditor/forest_birch_0_dig" instance=ExtResource("11_2e75p")]

[connection signal="on_click" from="GameMapTest/basicTile" to="." method="_on_basic_tile_on_click"]
